# OOP

./: CMakeLists.txt  base-test.sh
Core/: Core.cpp
StreamValidChecker/: StreamValidChecker.cpp  StreamValidChecker.h
lab1/Crypt/: crypt.cpp  masks.h  test.sh
lab1/Crypt/tests/: lots-of-lines  one-line
lab1/Fill/: fill.cpp  test.sh
lab1/Fill/tests/: closed  full  islands  lots-of-start-points  near-start-points  no-start-points  unclosed  unlimit-and-outside  wrong-char
lab1/Invert/: invert.cpp  test.sh
lab1/Invert/input/: less-row  more-column  more-row
lab1/Radix/: radix.cpp  test.sh
lab1/Replace/: replace.cpp  stdafx.h  test.sh
lab1/Replace/data/: test-empty-replace.txt  test-empty-subject  test-more-than-one-string.txt  test-valid-args.txt  test.txt
lab2/Dictionary/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  Dictionary.hpp  DictionaryCore.hpp  dict  dictionary.cpp  main.cpp
lab2/Dictionary/tests/: TestDictionary.cpp  notEmpty  wrongFormat
lab2/HTMLDecode/: CMakeLists.txt  Decoder.cpp  Decoder.h  Decoder.hpp  main.cpp
lab2/HTMLDecode/tests/: TestDecoder.cpp
lab2/PrimeGenerator/: CMakeLists.txt  PrimeGenerator.cpp  PrimeGenerator.h  PrimeGenerator.hpp  PrimeGeneratorCore.hpp  main.cpp
lab2/PrimeGenerator/tests/: TestPrimeGenerator.cpp
lab2/URLParser/: CMakeLists.txt  UrlParser.cpp  UrlParser.h  main.cpp
lab2/URLParser/tests/: test.cpp
lab2/Vector/: CMakeLists.txt  Vector.cpp  Vector.h  Vector.hpp  VectorCore.hpp  main.cpp
lab2/Vector/tests/: TestVector.cpp  TestVectorCore.cpp
lab2/Vector/tests/data/: letters  numbers
lab3/Calculator/: CMakeLists.txt  main.cpp
lab3/Calculator/Controller/: CalculatorController.cpp  CalculatorController.h
lab3/Calculator/Exception/: Exception.h  IdentifierIsNotUniqueException.cpp  IdentifierIsNotUniqueException.h  InvalidCommandUsageException.cpp  InvalidCommandUsageException.h  UndeclaredIdentifierException.cpp  UndeclaredIdentifierException.h
lab3/Calculator/Model/: Calculator.cpp  Calculator.h  Computable.h  Function.cpp  Function.h  Variable.cpp  Variable.h
lab3/Calculator/Tests/: TestCalculator.cpp  TestCalculatorController.cpp
lab3/Calculator/doc/: ARCHITECTURE.md
lab3/Car/: CMakeLists.txt  main.cpp
lab3/Car/Controller/: CarController.cpp  CarController.h
lab3/Car/Exception/: EngineIsOffException.cpp  EngineIsOffException.h  Exception.h  FailedToAccelerateException.cpp  FailedToAccelerateException.h  FailedToEngineOffWhileMovingException.cpp  FailedToEngineOffWhileMovingException.h  FailedToIncreaseGearException.cpp  FailedToIncreaseGearException.h  FailedToReverseWhileMovingException.cpp  FailedToReverseWhileMovingException.h  FailedToSetSpeedWhileEngineOffException.cpp  FailedToSetSpeedWhileEngineOffException.h  GearIsOutOfRangeException.cpp  GearIsOutOfRangeException.h  InvalidCommandArgumentException.cpp  InvalidCommandArgumentException.h  NegativeSpeedException.cpp  NegativeSpeedException.h  SpeedIsOutOfRangeException.cpp  SpeedIsOutOfRangeException.h  UnknownCommandException.cpp  UnknownCommandException.h  WrongCurrentSpeedException.cpp  WrongCurrentSpeedException.h  WrongInputException.cpp  WrongInputException.h
lab3/Car/Model/: Car.cpp  Car.h
lab3/Car/Tests/: TestCar.cpp
lab4/Shapes/: CMakeLists.txt  input  main.cpp
lab4/Shapes/Canvas/: Canvas.cpp  Canvas.h  ICanvas.h
lab4/Shapes/Controller/: ShapeController.cpp  ShapeController.h
lab4/Shapes/Model/: Circle.cpp  Circle.h  ICanvasDrawable.h  IShape.h  ISolidShape.h  LineSegment.cpp  LineSegment.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  SolidShape.cpp  SolidShape.h  Triangle.cpp  Triangle.h
lab4/Shapes/Tests/: TestDraw.cpp  TestShapes.cpp  TestShapesController.cpp
lab5/Date/: CMakeLists.txt  main.cpp
lab5/MyString/: CMakeLists.txt  main.cpp
lab6/HttpUrl/: CMakeLists.txt  main.cpp
lab6/HttpUrl/Exception/: Exceptions.h  UrlParsingError.cpp  UrlParsingError.h  WrongPortError.cpp  WrongPortError.h  WrongProtocolError.cpp  WrongProtocolError.h
lab6/HttpUrl/Model/: HttpUrl.cpp  HttpUrl.h  Protocol.cpp  Protocol.h
lab6/HttpUrl/test/: TestHttpUrl.cpp
lab6/StringList/: CMakeLists.txt  main.cpp
lab7/FIndMaxEx/: CMakeLists.txt  FindMaxEx.h  TestFindMaxEx.cpp  main.cpp
lab7/MyArray/: CMakeLists.txt  MyArray.h
(+18 files in other folders)
